# Proyecto_3_Discos

./: BaseDatos.cpp  BaseDatos.h  CMakeLists.txt  ControladorVideo.cpp  ControladorVideo.h  Data.xml  LectorXML.h  Singleton.cpp  Singleton.h  main.cpp
Listas/: LinkedList.h  Node.h
